[package]
edition = "2018"
name = "loggy"
version = "0.3.2"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
description = "An opinionated library for developing and testing rust applications that use logging."
repository = "https://github.com/orenbenkiki/loggy"
readme = "README.md"
keywords = ["logging", "testing"]
categories = ["development-tools::debugging", "development-tools::testing"]
license = "MIT"

[badges.travis-ci]
repository = "orenbenkiki/loggy"

[badges.codecov]
repository = "orenbenkiki/loggy"

[dependencies]
lazy_static = "^1.4.0"
log = "^0.4.8"
time = "^0.2.7"
unindent = "^0.1.5"
