[package]
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
categories = ["development-tools::debugging", "development-tools::testing"]
description = "An opinionated library for developing and testing rust applications that use logging."
edition = "2021"
keywords = ["logging", "testing"]
license = "MIT"
name = "loggy"
readme = "README.md"
repository = "https://github.com/orenbenkiki/loggy"
version = "0.5.3-dev"

[dependencies]
chrono = "^0.4.23"
lazy_static = "^1.4.0"
log = "^0.4.17"
parking_lot = "^0.12.0"
unindent = "^0.1.9"

[dependencies.loggy-macros]
path = "macros"
version = "0.2.0"
