[package]
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
categories = ["development-tools::debugging", "development-tools::testing"]
description = "Procedural macros for the loggy crate."
edition = "2021"
keywords = ["logging", "testing"]
license = "MIT"
name = "loggy-macros"
readme = "README.md"
repository = "https://github.com/orenbenkiki/loggy"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
